# pbp

./: .gitignore  .mbaridoc.json  .mypy.ini  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CITATION.cff  ChangeLog.md  DEVEL.md  DEVELOPMENT.md  LICENSE  PUBLISH.md  README.md  STANDALONE.md  justfile  main.py  metadata.yml  pbp.spec  pyproject.toml  requirements.txt
.github/workflows/: README.md  ci.yml  install.yml  release-docker.yml  release-pypi.yml  release-standalone.yml
.gizo/: justfile
NRS11/: globalAttributes_NRS11.yaml  variableAttributes_NRS11.yaml
NRS11/noaa-passive-bioacoustic_nrs_11_2019-2021/2020/: 20200101.json  20200102.json  20200103.json  20200104.json  20200105.json  20200106.json  20200107.json  20200108.json  20200109.json  20200110.json  20200111.json  20200112.json  20200113.json  20200114.json  20200115.json  20200116.json  20200117.json  20200118.json  20200119.json  20200120.json  20200121.json  20200122.json  20200123.json  20200124.json  (+7 more)
chumash/: 6716_calibration.json  6716_devices.json  chumash.sh  readme.md  wav_listing.txt
chumash/2023/: 20230101.json  20230102.json  20230103.json  20230104.json  20230105.json  20230106.json  20230110.json  20230111.json  20230114.json  20230115.json  20230116.json  20230117.json  20230121.json  20230122.json  20230123.json  20230124.json  20230125.json  20230126.json  20230127.json  20230128.json  20230129.json  20230130.json  20230131.json
docker/: Dockerfile  Dockerfile-minimal  README.md  docker-compose.yml  min.dockerfile
json/: readme.md
json/2022/: 20220901.json  20220902.json  20220903.json  20220904.json  20220905.json  20220906.json  20220907.json  20220909.json  20220910.json  20220911.json  20220912.json  20220913.json  20220914.json  20220915.json  20220916.json  20220917.json  20220918.json  20220919.json  20220920.json  20220921.json  20220922.json  20220923.json  20220924.json  20220925.json  20220926.json  20220927.json  20220928.json  20220929.json  20220930.json
jsons/: 20220902.json
metadata/: README.md  attributes.json  chumash_info.txt  globalAttrsChumash.json  var_attributes.json
metadata/chumash/: chumash_info.txt  globalAttributes.yaml  variableAttributes.yaml
metadata/mars/: globalAttributes.json  globalAttributes.yaml  variableAttributes.json  variableAttributes.yaml
metadata/mb05/: globalAttributes_MB05.yaml
misc/: compare.py  icListen1689_sensitivity_hms256kHz.csv  plot.sh  run_multiple_days.sh
notebooks/: PBP-NRS11-batch.ipynb  pbp-demonstration.ipynb  using_pyhydrophone.ipynb
pbp/: __init__.py  download_uri.py  file_helper.py  hmb_metadata.py  json_support.py  logging_helper.py  main.py  main_args.py  main_cli.py  main_cloud.py  main_hmb_generator.py  main_hmb_generator_args.py  main_hmb_generator_file.py  main_json_generator.py  main_json_generator_args.py  main_meta_generator.py  main_meta_generator_args.py  main_plot.py  metadata.py  misc_helper.py  plot.py  plotting.py  process_helper.py  pypam_support.py  sa_support.py  sa_support_impl.py  sa_support_pypam.py  simpleapi.py  spectral_analysis.py  uri_handler.py
pbp-doc/: README.md  justfile  mkdocs.yml  requirements.txt
pbp-doc/docs/: index.md  release-notes.md
pbp/cloud/: main_cloud.py
pbp/hmb_gen/: file_helper.py  hmb_metadata.py  hmso_pypam.py  main_hmb_generator.py  main_hmb_generator_args.py  main_hmb_generator_file.py  misc_helper.py  process_helper.py  pypam_support.py  simpleapi.py
pbp/hmb_plot/: main_plot.py  plot_const.py  plotting.py
pbp/job_agent/: job_agent.py  main_job_agent.py  main_job_agent_args.py  utils.py
pbp/job_gen/: main_job
pbp/json_generator/: corrector.py  gen_abstract.py  gen_base.py  gen_iclisten.py  gen_nrs.py  gen_soundtrap.py  metadata_extractor.py  utils.py
pbp/meta_gen/: gen_abstract.py  gen_iclisten.py  gen_nrs.py  gen_resea.py  gen_soundtrap.py  json_generator.py  main_meta_generator.py  main_meta_generator_args.py  meta_reader.py  utils.py
pbp/src/: file_helper.py  logging_helper.py  main_cloud.py  main_json_generator_args.py  process_helper.py  pypam_support.py
pbp/util/: __init__.py  bucket_key_simple.py  datetime_helper.py  logging_helper.py  uri_handler.py
scripts/: build_standalone.sh  mb05.sh  nrs11.py
src/: __init__.py  file_helper.py  json_support.py  logging_helper.py  main.py  main_args.py  main_cloud.py  main_json_generator.py  main_json_generator_args.py  md_update.py  metadata.py  misc_helper.py  plot.py  plot_const.py  plot_helper.py  plotting.py  process_helper.py  processor.py  pypam_support.py  test_dummy.py
src/json_generator/: corrector.py  gen_abstract.py  gen_iclisten.py  gen_nrs.py  gen_soundtrap.py  metadata_extractor.py  utils.py  wavfile.py
tests/: test_cli_smoke.py  test_download_uri.py  test_file_helper.py  test_get_bucket_key_simple.py  test_hmb_metadata.py  test_json_generator.py  test_json_parsing.py  test_json_support.py  test_meta_generator.py  test_metadata.py  test_misc.py  test_sa.py  test_simpleapi.py  test_spectral_analysis.py  test_uri_handler.py
tests/__snapshots__/: test_json_parsing.ambr  test_json_support.ambr  test_misc.ambr  test_simpleapi.ambr
tests/job_agent/: test_pbp_job_agent_nrs.py  test_pbp_job_agent_soundtrap.py
tests/json/: 20220902.json  20221102.json
tests/jsons/: 20221102.json
tests/yaml/: test_config.yaml  test_deployment_global_attributes.yaml  test_deployment_variable_attributes.yaml
(+35 files in other folders)
