[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mbari-pbp"
version = "1.7.3"
description = "PyPAM based Processing"
authors = [
    "Carlos Rueda <carueda@mbari.org>",
    "Danelle Cline <dcline@mbari.org>",
    "John Ryan <ryjo@mbari.org>",
]
maintainers = [
    "Carlos Rueda <carueda@mbari.org>",
    "Danelle Cline <dcline@mbari.org>",
]
homepage = "https://docs.mbari.org/pbp/"
license = "MIT"
readme = "README.md"
repository = "https://github.com/mbari-org/pbp"
packages = [{include = "pbp"}]

[tool.poetry.scripts]
pbp-hmb-gen = "pbp.main_hmb_generator:main"
pbp-cloud = "pbp.main_cloud:main"
pbp-hmb-plot = "pbp.main_plot:main"
pbp-meta-gen = "pbp.main_meta_generator:main"

[tool.poetry.dependencies]
python = ">=3.9,<3.12.0"
lifewatch-pypam = "0.3.2"
boto3 = "1.34.47"
google-cloud-storage = "2.18.0"
dataclasses-json = "0.6"
python-dateutil = "2.8.2"
pyyaml = "6.0"
progressbar2 = "3.53.1"
marshmallow = "3.20.2"
soundfile = "0.12.1"
h5netcdf = "1.3.0"
pvlib = "^0.11.0"
Pyarrow = "15.0.0"
loguru = {extras = ["mypy"], version = "^0.7.2"}
loguru-mypy = "^0.0.4"
awscli = "^1.33.20"

[tool.poetry.group.dev.dependencies]
mypy = "1.8.0"
ruff = "0.2.2"
pytest = "7.4.4"  # not upgraded due to conflict with pypam 0.3.0
syrupy = "4.6.1"
types-python-dateutil = "2.8.2"
types-PyYAML = "6.0.1"
types-six = "^1.16.21.20240513"
types-pytz = "^2024.1.0.20240417"
pre_commit = "4.2.0"

[tool.mypy]
show_error_codes = true
ignore_missing_imports = true
exclude = [
    'examples/',
    'pbp/plotting\.py'
]

[tool.ruff]
line-length = 90
exclude = [
  "virtenv/**"
]

[tool.pytest.ini_options]
testpaths = ["tests",]
pythonpath = ["."]
