[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mbari-pbp"
version = "1.8.6"
description = "PyPAM based Processing"
authors = [
    "Carlos Rueda <carueda@mbari.org>",
    "Danelle Cline <dcline@mbari.org>",
    "John Ryan <ryjo@mbari.org>",
]
maintainers = [
    "Carlos Rueda <carueda@mbari.org>",
    "Danelle Cline <dcline@mbari.org>",
]
homepage = "https://docs.mbari.org/pbp/"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mbari-org/pbp"
packages = [{include = "pbp"}]

[tool.poetry.scripts]
pbp = "pbp.main_cli:main"
pbp-hmb-gen = "pbp.hmb_gen.main_hmb_generator:main"
pbp-cloud = "pbp.cloud.main_cloud:main"
pbp-hmb-plot = "pbp.hmb_plot.main_plot:main"
pbp-meta-gen = "pbp.meta_gen.main_meta_generator:main"

[tool.poetry.dependencies]
python = ">=3.9,<3.12.0"
lifewatch-pypam = "0.3.2"
boto3 = "1.34.47"
google-cloud-storage = "2.18.0"
dataclasses-json = "0.6"
python-dateutil = "2.8.2"
pyyaml = "6.0"
progressbar2 = "3.53.1"
marshmallow = "3.20.2"
soundfile = "0.12.1"
h5netcdf = "1.3.0"
pvlib = "^0.11.0"
Pyarrow = "15.0.0"
loguru = {extras = ["mypy"], version = "^0.7.2"}
awscli = "^1.33.20"
isodate = "^0.7.2"

[tool.poetry.group.dev.dependencies]
mypy = "1.8.0"
loguru-mypy = "^0.0.4"
ruff = "0.2.2"
pytest = "7.4.4"  # not upgraded due to conflict with pypam 0.3.0
syrupy = "4.6.1"
types-python-dateutil = "2.8.2"
types-PyYAML = "6.0.1"
types-six = "^1.16.21.20240513"
types-pytz = "^2024.1.0.20240417"
pre_commit = "4.2.0"
pyinstaller = "^6.11.0"

[tool.mypy]
show_error_codes = true
ignore_missing_imports = true
exclude = [
    'examples/',
    'pbp/hmb_plot/plotting\.py',
    'build/',
    'dist/',
    'mbari-pbp-standalone.*/'
]

[tool.ruff]
line-length = 90
exclude = [
  "virtenv/**",
  "build/",
  "dist/",
  "mbari-pbp-standalone/"
]

[tool.pytest.ini_options]
testpaths = ["tests",]
pythonpath = ["."]
